Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Fixed
-
6.0
-
None
-
63e2acec0018c9c51406301f5bac1005c4516165
Description
The documentation of QStringTokenizer needs improvements.
- \section needs a number (e.g. \section1)
- Description of constructors, typedefs ... do not show up
qdoc warnings
qstringtokenizer.cpp:156: (qdoc) warning: Cannot find 'QStringTokenizer::difference_type' specified with '\typedef' in any header file qstringtokenizer.cpp:162: (qdoc) warning: Cannot find 'QStringTokenizer::size_type' specified with '\typedef' in any header file qstringtokenizer.cpp:168: (qdoc) warning: Cannot find 'QStringTokenizer::reference' specified with '\typedef' in any header file qstringtokenizer.cpp:177: (qdoc) warning: Cannot find 'QStringTokenizer::const_reference' specified with '\typedef' in any header file qstringtokenizer.cpp:183: (qdoc) warning: Cannot find 'QStringTokenizer::pointer' specified with '\typedef' in any header file qstringtokenizer.cpp:192: (qdoc) warning: Cannot find 'QStringTokenizer::const_pointer' specified with '\typedef' in any header file qstringtokenizer.cpp:198: (qdoc) warning: Cannot find 'QStringTokenizer::iterator' specified with '\typedef' in any header file qstringtokenizer.cpp:210: (qdoc) warning: Cannot find 'QStringTokenizer::const_iterator' specified with '\typedef' in any header file qstringtokenizer.cpp:219: (qdoc) warning: Cannot find 'QStringTokenizer::sentinel' specified with '\typedef' in any header file qstringtokenizer.cpp:228: (qdoc) warning: clang found diagnostics parsing \fn QStringTokenizer(Haystack haystack, String needle, Qt::CaseSensitivity cs, Qt::SplitBehavior sb) error: unknown type name 'Haystack' error: unknown type name 'String' error: deduction guide declaration without trailing return type error: deduction guide cannot have a function definition qstringtokenizer.cpp:228: (qdoc) warning: clang found diagnostics parsing \fn QStringTokenizer(Haystack haystack, String needle, Qt::SplitBehavior sb, Qt::CaseSensitivity cs) error: unknown type name 'Haystack' error: unknown type name 'String' error: deduction guide declaration without trailing return type error: deduction guide cannot have a function definition qstringtokenizer.cpp:247: (qdoc) warning: clang found diagnostics parsing \fn QStringTokenizer::const_iterator QStringTokenizer::begin() const error: 'QStringTokenizer' is not a class, namespace, or enumeration error: 'QStringTokenizer' is not a class, namespace, or enumeration qstringtokenizer.cpp:256: (qdoc) warning: clang found diagnostics parsing \fn QStringTokenizer::const_iterator QStringTokenizer::cbegin() const error: 'QStringTokenizer' is not a class, namespace, or enumeration error: 'QStringTokenizer' is not a class, namespace, or enumeration qstringtokenizer.cpp:264: (qdoc) warning: clang found diagnostics parsing \fn QStringTokenizer::sentinel QStringTokenizer::end() const error: 'QStringTokenizer' is not a class, namespace, or enumeration error: 'QStringTokenizer' is not a class, namespace, or enumeration qstringtokenizer.cpp:273: (qdoc) warning: clang found diagnostics parsing \fn QStringTokenizer::sentinel QStringTokenizer::cend() const error: 'QStringTokenizer' is not a class, namespace, or enumeration error: 'QStringTokenizer' is not a class, namespace, or enumeration qstringtokenizer.cpp:281: (qdoc) warning: clang found diagnostics parsing \fn QStringTokenizer::toContainer(Container &&c) const & error: 'QStringTokenizer' is not a class, namespace, or enumeration error: unknown type name 'Container' qstringtokenizer.cpp:313: (qdoc) warning: clang found diagnostics parsing \fn QStringTokenizer::toContainer(Container &&c) const && error: 'QStringTokenizer' is not a class, namespace, or enumeration error: unknown type name 'Container' qstringtokenizer.cpp:346: (qdoc) warning: clang found diagnostics parsing \fn qTokenize(Haystack &&haystack, Needle &&needle, Flags...flags) error: unknown type name 'Haystack' error: unknown type name 'Needle' error: unknown type name 'Flags' error: type 'int' of function parameter pack does not contain any unexpanded parameter packs error: C++ requires a type specifier for all declarations qstringtokenizer.cpp:45: (qdoc) warning: Can't link to 'index.html' qstringtokenizer.cpp:45: (qdoc) warning: '\brief' statement does not end with a full stop. qstringtokenizer.cpp:45: (qdoc) warning: Can't link to 'index.html' qstringtokenizer.cpp:45: (qdoc) warning: Can't link to 'reentrant' qstringtokenizer.cpp:45: (qdoc) warning: Can't link to 'QLatin1Sting::split()'